# Catalina

./: .gitattributes  .gitignore  BUILD.TXT  BUILD32.TXT  Catalina_FAQ.txt  DEMOS_P2.TXT  README.HX512  README.Linux  README.TXT  README.Win10  README.Win7  README.md  README_P2.TXT  build_windows_binaries.bat  catalina_shortcuts.bat  use_catalina  use_catalina.bat
basic/: Cached_XMM.inc  Catalina_CMM.spin  Catalina_CMM_threaded.spin  Catalina_CMM_threaded_dynamic.spin  Catalina_Common.spin  Catalina_EMM_EEPROM_Loader.spin  Catalina_FullDuplexSerial4FC.spin  Catalina_LMM.spin  Catalina_LMM_dynamic.spin  Catalina_XMM.spin  Constants.inc  Custom_DEF.inc  README.TXT  catalina_compact.inc  cmm_blackcat.spin  cmm_default.spin  emm_blackcat.spin  emm_default.spin  lmm_blackcat.spin  lmm_default.spin  smm_blackcat.spin  smm_default.spin  xmm_progbeg.s
catalina_geany/: README.md  ReadMe.Dependencies.Geany.txt  build_all  catalina_geany.lnk  gtk-bundle-from-msys2.sh
catalyst/: CATALYST.TXT  README.TXT  build_all  build_all.bat  build_morpheus  build_morpheus.bat
codeblocks/: P2_demos.workspace  P2_serial2_demos.workspace  README.txt  catalyst_demos.workspace  catalyst_demos.workspace.layout  debug_demos.workspace  debug_demos.workspace.layout  default.conf.Linux  default.conf.win32  demos.workspace  demos.workspace.layout  (+19 more)
source/comms/vttest/: MANIFEST  README  config.cache  config.h  config.status  configure.in  esc.c  main.c  makefile  unix_io.c  vttest.h
source/comms/vttest/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
(+10148 files in other folders)
