dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.37 2024/09/18 21:52:42 tom Exp $
AC_REVISION($Revision: 1.37 $)

AC_INIT
AC_CONFIG_SRCDIR([esc.c])
AC_CONFIG_HEADERS([config.h:config.hin])

CF_CHECK_CACHE
CF_WITH_SYSTYPE

AC_ARG_PROGRAM
CF_PROG_CC

CF_WITHOUT_X

AC_PROG_INSTALL
CF_MAKE_PHONY
CF_MAKE_TAGS
CF_PROG_LINT

CF_WITH_MAN2HTML
CF_DISABLE_ECHO
CF_ENABLE_WARNINGS
CF_XOPEN_SOURCE

###	extra things that we'll substitute in the makefile
AC_CHECK_DECL(exit)
m4_warn([obsolete],
[your code may safely assume C89 semantics that RETSIGTYPE is void.
Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.])dnl
AC_CACHE_CHECK([return type of signal handlers],[ac_cv_type_signal],[AC_COMPILE_IFELSE(
[AC_LANG_PROGRAM([#include <sys/types.h>
#include <signal.h>
],
		 [return *(signal (0, 0)) (0) == 1;])],
		   [ac_cv_type_signal=int],
		   [ac_cv_type_signal=void])])
AC_DEFINE_UNQUOTED([RETSIGTYPE],[$ac_cv_type_signal],[Define as the return type of signal handlers
		    (`int' or `void').])

AC_CHECK_HEADERS([\
fcntl.h \
ioctl.h \
sgtty.h \
sys/filio.h \
sys/ioctl.h \
termio.h \
termios.h \
])

AC_CHECK_FUNCS([\
alarm \
rdchk \
tcgetattr \
usleep \
vfprintf \
])
CF_LOCALE
CF_STRERROR

###	special configuration tests
CF_POSIX_VDISABLE
CF_FCNTL_VS_IOCTL
AM_LANGINFO_CODESET

###	debugging/testing

###	output makefile and config.h
AC_CONFIG_FILES([makefile])
AC_OUTPUT
CF_MAKE_DOCS(['$(THIS)'],1)
